--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1223,7 +1223,7 @@ img.emojioneemoji {
 	height: 24px !important;
 }
 
-.documents.my-document #buddypress #item-body #bp-media-uploader #media-uploader, .documents.my-document #buddypress #item-body #bp-media-create-folder #media-uploader-folder, .documents.folder #buddypress #item-body #bp-media-uploader #media-uploader, .groups.documents #buddypress #item-body #bp-media-create-folder #media-uploader-folder, .groups.documents #buddypress #item-body #bp-media-uploader #media-uploader {
+.documents.my-document #buddypress #item-body #bp-media-uploader #media-uploader, .documents.my-document #buddypress #item-body #bp-media-create-folder #media-uploader-folder, .documents.folder #buddypress #item-body #bp-media-uploader #media-uploader, .groups.documents #buddypress #item-body #bp-media-create-folder #media-uploader-folder, .groups.documents #buddypress #item-body #bp-media-uploader #media-uploader, .activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader {
 
 	.dz-preview.dz-file-preview .dz-image {
 		padding-top: 0;
