--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
@@ -16,10 +16,14 @@
 	border-right: 1px solid #E7E9EC;
 	min-width: 0;
         flex: 0 0 360px;
-}
 
-.bb-groups-invites-left .group-invites-search {
-	padding: 20px;
+        .bp-list li .item-avatar {
+            margin-right: 15px;
+        }
+
+        .group-invites-search {
+                padding: 20px;
+        }
 }
 
 #item-body #group-invites-container li.selected {
@@ -268,9 +272,10 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
         padding: 8px 20px;
 }
 
-#group-invites-container .bb-groups-invites-left .group-invites-members-listing .list-title {
-	color: #393e41;
+#group-invites-container .bb-groups-invites-left .group-invites-members-listing .list-title,
+#group-invites-container .bb-groups-invites-left .group-invites-members-listing .list-title a {
 	font-size: 15px;
+        font-weight: 400;
 	margin: 0 auto;
 	width: 100%;
 }
