--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_invites.scss
@@ -137,7 +137,7 @@ body.groups.group-invites span.select2-dropdown.select2-dropdown--below {
         justify-content: center;
         overflow: hidden;
     }
-    
+
     .bb-groups-invites-left.bb-select-member-view .bb-groups-invites-left-inner {
         background: #fff;
         border-radius: 5px;
@@ -369,6 +369,7 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 }
 
 #group-invites-container .bb-groups-invites-left .bp-invites-dropdown-options-loader-hide,
+#group-invites-container .bb-groups-invites-right .bp-invites-submit-loader-hide,
 #group-invites-container .bb-groups-invites-left .group-invites-members-listing .last {
 	display: none;
 }
@@ -376,6 +377,42 @@ body.groups.group-invites #send_group_invite_form .select2-container--default .s
 .bb-groups-invites-left .group-invites-members-listing .bp-invites-feedback,
 .bb-groups-invites-right #send_group_invite_form .bb-groups-invites-right-top .bp-invites-feedback {
 	display: none;
+}
+
+#bp-pending-invites-loader {
+  display: none;
+}
+
+#bp-pending-invites-loader {
+  position: relative;
+  text-align: center;
+}
+
+#bp-pending-invites-loader .dashicons-update:before {
+  content: '\e838';
+  font-family: 'bb-icons';
+  font-size: 20px;
+  display: block;
+  -webkit-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
+}
+
+#bp-invites-submit-loader {
+  margin-left: auto;
+  margin-right: 10px;
+  position: relative;
+  top: 10px;
+}
+
+#bp-invites-submit-loader .dashicons-update:before {
+  content: '\e838';
+  font-family: 'bb-icons';
+  font-size: 20px;
+  display: block;
+  -webkit-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  transform: scale(0.8);
 }
 
 .group-invites-members-listing {
