#350 - Designed tags in search result

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -188,7 +188,7 @@ AJAX SEARCH
 		line-height: 1.3;
 		align-self: center;
 
-		.item-desc {
+		.item-desc, .item-tags {
 			margin-top: 5px;
 			font-size: 80%;
 			color: #a9a9a9;
