--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1273,3 +1273,70 @@ img.emojioneemoji {
 #media-folder-document-data-table td img {
 	max-width: 40px;
 }
+.bp-media-document-uploader .dropzone .dz-preview,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader{
+	.dz-success-mark,
+	.dz-progress,
+	.dz-error-mark{
+		top: 70%;
+	}
+	.dz-filename{
+		font-size: 14px;
+	}
+}
+
+#media-folder-document-data-table .media-folder_items{
+	margin: 0 15px;
+	border-bottom: 1px solid #E7E9EC;
+	padding: 15px 0;
+	display: flex;
+	align-items: center;
+	.media-folder_icon{
+		flex-basis: 70px;
+    	padding-left: 10px;
+		img{
+			max-width: 35px;
+		}
+	}
+	.media-folder_details{
+		display: flex;
+		flex-basis: calc(100% - 125px);
+		flex-flow: column;
+	}
+	.media-folder_details__bottom{
+		display: block;
+		font-size: 13px;
+		color: #939597;
+		line-height: 1.3;
+		.media-folder_date{
+			display: inline-block;
+			vertical-align: middle;
+		}
+		.media-folder_author{
+			margin-left: 3px;
+			display: inline-block;
+			&:before{
+				content: '';
+				height: 4px;
+				width: 4px;
+				background-color: #c8cbcf;
+				display: inline-block;
+				border-radius: 100%;
+				vertical-align: middle;
+				margin-right: 6px;
+			}
+		}
+	}
+	.media-folder_actions{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-basis: 55px;
+		.media-folder_action__anchor{
+			i{
+				font-size: 21px;
+			}
+		}
+	}
+
+}
