--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1917,60 +1917,62 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity {
-  border: 1px solid #999;
+  border: 1px solid #E7E9EC;
   border-radius: 5px;
   padding: 15px;
   display: inline-block;
-  align-items: center;
   width: 100%;
-  margin: 0 3px;
+  margin: 3px;
+  padding: 0;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description {
-  padding-right: 10px;
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap {
+  width: calc(100% - 70px);
   display: inline-block;
-  width: calc(100% - 45px);
   vertical-align: middle;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .entry-img {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .entry-img {
+  width: 70px;
+  text-align: center;
+  padding: 15px 0;
   display: inline-block;
-  width: 35px;
   vertical-align: middle;
+  background-color: #f2f2f2;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .entry-img img {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .entry-img img {
   width: 35px;
   height: 35px;
   position: static;
   object-fit: inherit;
   min-height: inherit;
   min-width: inherit;
-  float: left;
-  display: inline-block;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details {
-  padding-left: 10px;
-  width: calc(100% - 45px);
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap {
+  width: calc(100% - 75px);
   display: inline-block;
   vertical-align: middle;
+  padding-left: 15px;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details .document-title {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap .document-title {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   width: 100%;
   display: block;
+  font-weight: bold;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details .document-description {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap .document-description {
   display: block;
+  color: #7F868F;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity > .entry-img {
-  width: 35px;
+  width: 65px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -1978,6 +1980,7 @@ span.dashicons.dashicons-admin-file:before {
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity > .entry-img img {
   width: 35px;
   height: 35px;
+  object-fit: contain;
 }
 
 /**
@@ -10829,6 +10832,82 @@ img.emojioneemoji {
 
 #media-folder-document-data-table td img {
   max-width: 40px;
+}
+
+.bp-media-document-uploader .dropzone .dz-preview .dz-success-mark,
+.bp-media-document-uploader .dropzone .dz-preview .dz-progress,
+.bp-media-document-uploader .dropzone .dz-preview .dz-error-mark,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-success-mark,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-progress,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-error-mark {
+  top: 70%;
+}
+
+.bp-media-document-uploader .dropzone .dz-preview .dz-filename,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-filename {
+  font-size: 14px;
+}
+
+#media-folder-document-data-table .media-folder_items {
+  margin: 0 15px;
+  border-bottom: 1px solid #E7E9EC;
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_icon {
+  flex-basis: 70px;
+  padding-left: 10px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_icon img {
+  max-width: 35px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details {
+  display: flex;
+  flex-basis: calc(100% - 125px);
+  flex-flow: column;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
+  display: block;
+  font-size: 13px;
+  color: #939597;
+  line-height: 1.3;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_date {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author {
+  margin-left: 3px;
+  display: inline-block;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author:before {
+  content: '';
+  height: 4px;
+  width: 4px;
+  background-color: #c8cbcf;
+  display: inline-block;
+  border-radius: 100%;
+  vertical-align: middle;
+  margin-right: 6px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 55px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__anchor i {
+  font-size: 21px;
 }
 
 /**
