--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1917,60 +1917,62 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity {
-  border: 1px solid #999;
+  border: 1px solid #E7E9EC;
   border-radius: 5px;
   padding: 15px;
   display: inline-block;
-  align-items: center;
   width: 100%;
-  margin: 0 3px;
+  margin: 3px;
+  padding: 0;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description {
-  padding-left: 10px;
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap {
+  width: calc(100% - 70px);
   display: inline-block;
-  width: calc(100% - 45px);
   vertical-align: middle;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .entry-img {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .entry-img {
+  width: 70px;
+  text-align: center;
+  padding: 15px 0;
   display: inline-block;
-  width: 35px;
   vertical-align: middle;
+  background-color: #f2f2f2;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .entry-img img {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .entry-img img {
   width: 35px;
   height: 35px;
   position: static;
   object-fit: inherit;
   min-height: inherit;
   min-width: inherit;
-  float: right;
-  display: inline-block;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details {
-  padding-right: 10px;
-  width: calc(100% - 45px);
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap {
+  width: calc(100% - 75px);
   display: inline-block;
   vertical-align: middle;
+  padding-right: 15px;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details .document-title {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap .document-title {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   width: 100%;
   display: block;
+  font-weight: bold;
 }
 
-.bb-activity-media-wrap .bb-activity-media-elem.document-activity .description .document-details .document-description {
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap .document-detail-wrap .document-description {
   display: block;
+  color: #7F868F;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity > .entry-img {
-  width: 35px;
+  width: 65px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -1978,6 +1980,7 @@ span.dashicons.dashicons-admin-file:before {
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity > .entry-img img {
   width: 35px;
   height: 35px;
+  object-fit: contain;
 }
 
 /**
@@ -10829,6 +10832,226 @@ img.emojioneemoji {
 
 #media-folder-document-data-table td img {
   max-width: 40px;
+}
+
+.bp-media-document-uploader .dropzone .dz-preview .dz-success-mark,
+.bp-media-document-uploader .dropzone .dz-preview .dz-progress,
+.bp-media-document-uploader .dropzone .dz-preview .dz-error-mark,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-success-mark,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-progress,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-error-mark {
+  top: 70%;
+}
+
+.bp-media-document-uploader .dropzone .dz-preview .dz-filename,
+.activity-update-form #whats-new-attachments .activity-document-container #activity-post-document-uploader .dz-filename {
+  font-size: 14px;
+}
+
+#media-folder-document-data-table .media-folder_items {
+  margin: 0;
+  border-bottom: 1px solid #E7E9EC;
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+}
+
+#media-folder-document-data-table .media-folder_items:last-child {
+  border-bottom: 0;
+}
+
+#media-folder-document-data-table .media-folder_items.is-visible {
+  z-index: 1;
+}
+
+#media-folder-document-data-table .media-folder_items.is-visible .media-folder_actions .media-folder_action__list {
+  opacity: 1;
+  visibility: visible;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_icon {
+  flex-basis: 70px;
+  padding-right: 10px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_icon img {
+  max-width: 35px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details {
+  display: flex;
+  flex-basis: calc(100% - 125px);
+  flex-flow: column;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details .media-folder_name {
+  color: #122B46;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom {
+  display: block;
+  font-size: 13px;
+  color: #939597;
+  line-height: 1.3;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_date {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author {
+  margin-right: 3px;
+  display: inline-block;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_details__bottom .media-folder_author:before {
+  content: '';
+  height: 4px;
+  width: 4px;
+  background-color: #c8cbcf;
+  display: inline-block;
+  border-radius: 100%;
+  vertical-align: middle;
+  margin-left: 6px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 55px;
+  position: relative;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__anchor i {
+  font-size: 21px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list {
+  position: absolute;
+  top: 30px;
+  background: #fff;
+  box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+  border-radius: 4px;
+  width: 168px;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 0;
+  margin: 0 auto;
+  left: 0;
+  right: -6px;
+  box-sizing: border-box;
+  border: 8px solid black;
+  border-color: #fff transparent transparent #fff;
+  -webkit-transform-origin: 100% 0;
+  -ms-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  box-shadow: -2px -3px 3px 0 rgba(0, 0, 0, 0.02);
+  z-index: 101;
+  opacity: 1;
+  visibility: visible;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul {
+  list-style: none;
+  margin: 10px 0;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a {
+  padding: 5px 10px;
+  display: block;
+  font-size: 13px;
+}
+
+#media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list ul li a:hover {
+  background-color: #F5F5F5;
+}
+
+@media screen and (max-width: 460px) {
+  #media-folder-document-data-table .media-folder_items {
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_icon {
+    flex-basis: auto;
+    padding-right: 0;
+    margin-bottom: 5px;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_icon img {
+    width: 100%;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_actions {
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list {
+    left: -3px;
+  }
+  #media-folder-document-data-table .media-folder_items .media-folder_actions .media-folder_action__list:after {
+    right: inherit;
+    left: 9px;
+  }
+}
+
+.media-folder-document-filters {
+  display: inline-block;
+  width: calc(100% + 40px);
+  margin: 0 -20px;
+  padding: 0 20px 15px;
+  border-bottom: 1px solid #E7E9EC;
+}
+
+.media-folder-document-filters .media-search-form {
+  background-color: #fff;
+  border: 1px solid #DEDFE2;
+  border-radius: 100px;
+  margin-bottom: 0;
+  position: relative;
+  float: right;
+}
+
+.media-folder-document-filters .media-search-form input[type=text] {
+  background: transparent;
+  border-radius: 100px;
+  border: 0;
+  height: 34px;
+  font-size: 14px;
+  letter-spacing: -0.24px;
+  padding: 0 35px 0 30px;
+}
+
+.media-folder-document-filters .select-wrap {
+  float: left;
+}
+
+.media-folder-document-filters .select-wrap select {
+  -moz-appearance: menulist;
+  -webkit-appearance: menulist;
+  -o-appearance: menulist;
+  appearance: menulist;
+}
+
+@media screen and (max-width: 460px) {
+  .media-folder-document-filters .media-search-form,
+  .media-folder-document-filters .select-wrap {
+    float: none;
+    margin-bottom: 10px;
+  }
 }
 
 /**
