--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3560,6 +3560,47 @@ body.register .buddypress-wrap .page ul {
   }
 }
 
+/* Profile Completion Widget  */
+div.profile_completion_wrap .progress_text_wrap {
+  text-align: left;
+  margin-bottom: 5px;
+}
+
+div.profile_completion_wrap .progress_container {
+  border: 1px solid black;
+}
+
+div.profile_completion_wrap .progress_container .pc_progress {
+  height: 20px;
+  background-color: #0b80a4;
+}
+
+div.profile_completion_wrap ul.pc_detailed_progress li {
+  margin: 15px 0px;
+}
+
+div.profile_completion_wrap ul.pc_detailed_progress li span.completed_staus {
+  color: white;
+  border-radius: 8px;
+  padding: 2px;
+  float: left;
+  width: 45px;
+  text-align: center;
+}
+
+div.profile_completion_wrap ul.pc_detailed_progress li.completed span.completed_staus {
+  background-color: #438c48;
+}
+
+div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.section_name a {
+  color: #5087e5;
+  text-decoration: underline;
+}
+
+div.profile_completion_wrap ul.pc_detailed_progress li.incomplete span.completed_staus {
+  background-color: #b71717;
+}
+
 /**
 *-------------------------------------------
 * @subsection 5.2.2.3 - Groups
